Lanai/src/Lanai/wwwroot/css/site.css
/* tab and photo*/
@font-face {
    font-family: Montserrat;
    src: url(/fonts/Montserrat-Regular.otf);
}
@font-face {
    font-family: Montserrat-Bold;
    src: url(/fonts/Montserrat-Bold.otf);
}
@font-face {
    font-family: Montserrat-Light;
    src: url(/fonts/Montserrat-Light.otf);
}
@font-face {
    font-family: Montserrat-Black;
    src: url(/fonts/Montserrat-Black.otf);
}
.overlay-photo{
    color: #fff;
}
.intro-photo {
    display: block;
    min-height: 100%;
    position: relative;
    background-image: url(/images/4H9A8705.jpg);
    background-position: center;
    background-size: cover;
}
.overlay-photo{
    background: rgba(23,118,247,0.2);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00333333',endColorstr='#8c333333',GradientType=0);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: absolute;
}
body, html {
    height: 100%;
    position:relative;
    margin: 0px;
}

.intro-text{  
    position: absolute;
    bottom: 340px;
    font-family: Montserrat-Bold;   
    text-align: center;
}
.intro-text h1{
    font-family: Montserrat-Black;
	font-size: 60px;   
}
.intro-text span{
    padding-top:30px;
	font-size: 14px;
	font-weight: bold;
	text-transform: uppercase;
    opacity:.6;
}
.tab-menu{
    position: absolute;
    bottom: 120px;
    left: 0;
    right: 0;
}
.tab-menu li:first-child{
    width: 180px;
	height: 120px;	
	border-radius: 60px 0 0 60px;
	-webkit-box-shadow: 0 0 20px rgba(52,75,123,.15);
	-moz-box-shadow: 0 0 20px rgba(52,75,123,.15);
	box-shadow: 0 0 20px rgba(52,75,123,.15);
}
.tab-menu li:last-child{
    width: 180px;
	height: 120px;	
	border-radius: 0px 60px 60px 0px;
	-webkit-box-shadow: 0 0 20px rgba(52,75,123,.15);
	-moz-box-shadow: 0 0 20px rgba(52,75,123,.15);
	box-shadow: 0 0 20px rgba(52,75,123,.15);
}
.tab-menu .tab-holder-middle{
}
.tab-menu .tab-title{
    font-family: Montserrat-Bold;
	font-size: 14px;
	font-weight: bold;
	text-transform: uppercase;
}
.tab-menu i.fa{
    font-size:42px;
    display:block;
    
}
.tab-menu ul{
    list-style-type:none;
    display: flex;
    justify-content: center;
    padding-left: 0px;
}
.tab-menu li{
    cursor:pointer;
    position:relative;
    border-right: 1px solid rgba(69,75,74,1);
	background-color: rgba(0,0,0,0.5);	
}
.tab-menu li.active, .tab-menu li:hover{
	background-color: #6fc754;
}
.tab-menu li:last-child{
    border-right: none;
}
.tab-menu .tab-title{
    position:absolute;
    width: 130px;
    text-align: center;
    right: 0px;
    top: 76px;
}
.tab-menu i.fa {
    top:25px;
    position: absolute;
    right: 0px;
    width: 130px;
    text-align: center;
}
.tab-menu li:last-child .tab-title, .tab-menu li:last-child i.fa{
    right:initial;
    left:0px;
}
.tab-menu .tab-holder-middle, .tab-menu .tab-holder-middle i.fa, .tab-menu .tab-holder-middle .tab-title{
    width:150px;
}
/* top menu*/

section.top-menu{
    padding-top:60px;
}
.logo{
    font-family: Arial;
	font-size: 24px;
	font-weight: bold;
    margin-top:-10px;
}
.menu{
    display:flex;
    justify-content:center;
    list-style-type:none;
    padding:0;    
}
.menu li{
    font-family: Montserrat-Bold;
	font-size: 14px;
	font-weight: bold;
	text-transform: uppercase;
    cursor:pointer;   
}
.uppercase-text{
     font-family: Montserrat-Bold;
	font-size: 14px;
	font-weight: bold;
	text-transform: uppercase;
    cursor:pointer;
}
.opacity-3{
    opacity:.3;
}
.opacity-8{
    opacity:.8;
}
.menu li.active,.menu li:hover {
    opacity:0.4;
}
.menu li.more:hover {
    opacity:1;
}
.menu li.more button:hover {
    opacity:.4;
}
#search{
    opacity:0.6;
    margin-top: -5px;
}
#search i{
    font-size:15px;
    position: absolute;
    right: 134px;
    top: 6px;
}
#search input{
    width: 160px;
	height: 30px;
	-webkit-border-radius: 14px;
	-moz-border-radius: 14px;
	border-radius: 14px;
	background-color: rgba(252,252,252,.08);
	border: solid 1px rgba(244,244,244,.25);
    font-family: Montserrat-Light;
	font-size: 14px;
    padding:0 15px 0 35px;
    position: absolute;
    right: 0px;
}
#search input:focus {
   outline:initial;
   border-color: rgb(51, 150, 241)
}


#container{
    background-color: #eff4f8;
	-webkit-box-shadow: 0 0 65px rgba(60,108,222,.25);
	-moz-box-shadow: 0 0 65px rgba(60,108,222,.25);
	box-shadow: 0 0 65px rgba(60,108,222,.25);
    min-height:500px;
}
#viewButton{
    display:flex;
    justify-content:center;
    padding-top:60px;
}
#viewButton .field{
    width: 258px;
    height: 50px;
    -webkit-border-radius: 25px;
    -moz-border-radius: 25px;
    border-radius: 25px;
    border: solid 2px rgba(124, 153, 214,0.15);
    display:block;
    padding:3px;    
    font-family: Montserrat-Bold;
	font-size: 14px;
	font-weight: bold;
	text-transform: uppercase;
    display:flex;
}
#viewButton .small-button{   	
    text-align: center;
    padding-top: 10px;
    width: 124px;
    height: 40px;
    color: #b9c2d7;
    cursor:pointer;
}

#viewButton .small-button.active {   
	-webkit-border-radius: 21px;
	-moz-border-radius: 21px;
	border-radius: 21px;
	background-color: #fff;
	-webkit-box-shadow: 0 5px 20px rgba(52,75,123,.15);
	-moz-box-shadow: 0 5px 20px rgba(52,75,123,.15);
	box-shadow: 0 5px 20px rgba(52,75,123,.15);
    color: #6fc754; 
    cursor:default;   
}


/*page*/
.photo-item{
    height:560px;
    background-color:white;
    border-radius: 10px;
    background-position:center;
    background-size:cover;
    position:relative;
}
.no-padding{
    padding:0!important;
}
.photo-item .card{   
    position: absolute;
    margin-left:10px;
    bottom:10px;
    width:calc(100% - 20px);
	height: 255px;
	-webkit-border-radius: 8px/5px;
	-moz-border-radius: 8px/5px;
	border-radius: 8px/5px;
	background-color: #fff;
	-webkit-box-shadow: 0 2px 10px rgba(45,45,46,.6);
	-moz-box-shadow: 0 2px 10px rgba(45,45,46,.6);
	box-shadow: 0 2px 10px rgba(45,45,46,.6);
}
#pageContent {
    margin-top:60px;
}
.container {
        width: 100%;
}
@media (min-width: 1440px) {/*todo more device*/
    .container {
        width: 1440px;
    }
    .intro-text h1 {       
        padding-left: 20%;
        padding-right: 20%;
    }
}
.photo-item .top-info{
    height:45px;
   -webkit-box-shadow: 0 0 15px rgba(60,108,222,.15);
	-moz-box-shadow: 0 0 15px rgba(60,108,222,.15);
	box-shadow: 0 0 15px rgba(60,108,222,.15);
}
.photo-item .top-info div{
    height:45px;
    padding-top: 12px;
}
.photo-item .top-info i.fa{
    font-size:16px;
    opacity:.5;
}
.photo-item .top-info .counter{
    font-family: Montserrat;
	font-size: 16px;
	color: #7c99d6;
    margin-left:5px;
}
.photo-item .title{
    margin-top:25px;
    font-family: Montserrat-Bold;
	font-size: 18px;
	color: #3c6cde;
}
.photo-item .description{
    padding-top:7px;
    font-family: Montserrat-Light;
	font-size: 14px;
	color: #8b94ae;
    height:105px;
    overflow:hidden;
}
.m-b-50{
    margin-bottom:50px;
}
.photo-item .label-icon{
    width: 50px;
	height: 40px;
	-webkit-border-radius: 15px 0 0 15px/17px 0 0 17px;
	-moz-border-radius: 15px 0 0 15px/17px 0 0 17px;
	border-radius: 15px 0 0 15px/17px 0 0 17px;
    position:absolute;
    top:20px;
    right:0px;
    text-align:center;
    line-height: 50px;
	background-color: #746dbd;
    font-size:24px;
    color: #fff;
    padding-top: 7px;
}
.photo-item .label-icon.lanai-car{
    background-color: #f692b4;
}
.photo-item .label-icon.lanai-place{
    background-color: #746dbd;
}
.photo-item .label-icon.lanai-hike{
    background-color: #82d0f4;
}
.button{    
	height: 50px;
    min-width: 170px;
	-webkit-border-radius: 25px;
	-moz-border-radius: 25px;
	border-radius: 25px;
	background-color: #fff;
	-webkit-box-shadow: 0 5px 20px rgba(52,75,123,.15);
	-moz-box-shadow: 0 5px 20px rgba(52,75,123,.15);
	box-shadow: 0 5px 20px rgba(52,75,123,.15);
    font-family: Montserrat-Bold;
	font-size: 14px;
	font-weight: bold;
	text-transform: uppercase;
	color: #6fc754;
    padding:0 15px 0 15px;
    border-color: transparent;
}
.button:hover{
    opacity:.6;
}
.button:focus{
    outline:initial;
}
.content-center{
    display:flex;
    justify-content:center;
}
.content-right{
    display:flex;
    justify-content:flex-end;
}
#loadMore{
    margin-top:15px;
}
#footer{
    margin-top:130px;
	height: 300px;
	background-color: #0d1f2d;
    color:#fff;
}
.social-icon i{
    font-size:20px;
    margin-left: 30px;
}
#footer .line{
	height: 1px;
	-webkit-border-radius: 1px 0 0;
	-moz-border-radius: 1px 0 0;
	border-radius: 1px 0 0;
    background-color: #fff;
    opacity:0.05;
    margin-top:57px;
}
.footer-content{
    margin-top:64px;
}
#download-icon{
    background-image:url(/images/Download.png);
    background-position:center;
    background-size:cover;
    width: 140px;
	height: 42px;
    background-color:transparent;
    margin-top: -17px;
}
.menu.privacy li{
    padding-right:60px;
}

.more-button{
    border: none;
    background: transparent;
    text-transform: uppercase;
    white-space:nowrap;
}
.menu .more ul{
    -webkit-border-radius: 12px 12px 12px 12px;
	-moz-border-radius: 12px 12px 12px 12px;
	border-radius: 12px 12px 12px 12px;
	background-color: rgba(255,255,255,.08);
	border: solid 1px rgba(244,244,244,.25);
    padding-top: 0;
    padding-bottom: 0px;
}
.dropdown-menu > li > a {
    color:#fff;
    padding-top:12px;
    padding-bottom:12px;
}
.dropdown-menu {
    min-width: 136px;
}
.dropdown-menu>li>a:hover {
    color: #fff;
    background-color: rgba(63,72,92,.2);
}
.dropdown.open .fa-chevron-down{
    display:none;   
}
.dropdown.open .fa-chevron-up{
    display:initial!important;   
}

/*map*/

#mapPanel{
    height:800px;
    background-color:#fff;
    border-radius: 10px 0px 0px 10px;
}

